# gemini_chat_completion

./: basic.py  gemini_function_call.py  gemini_multi_tool_call.py  gemini_multi_turn_chat.py  gemini_streaming.py  gemini_streaming_tool_call.py  gemini_structured.py  gemini_tool_structured_output.py  gemini_voice_client.py  pyproject.toml
