[project]
name = "gemini-chat-completion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.97.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "pytz>=2025.2",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
    "websockets>=15.0.1",
]
